<resources>
    <string name="app_name">KPU App 2</string>
    <string name="app_welkom">Selamat Datang!</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="pw">Password</string>
    <string name="placeh_email">Masukan Email</string>
    <string name="placeh_pw">Masukan Password</string>
    <string name="menu_1">Informasi</string>
    <string name="menu_2">Form Entri Data Pemilih</string>
    <string name="menu_3">Data Pemilih</string>
    <string name="menu_3_1">Detail Data Pemilih</string>
    <string name="menu_4">Keluar</string>
    <string name="empty_message">Maaf, data pemilih belum tersedia, silakan input data pemilih terlebih dahulu</string>
    <string name="button_input">Entri Data Pemilih</string>
    <string name="button_submit">Submit</string>
    <string name="nik">NIK</string>
    <string name="nama_lengkap">Nama Lengkap </string>
    <string name="nomor_hp">Nomor Handphone</string>
    <string name="jenis_kel">Jenis Kelamin </string>
    <string name="pr">Perempuan </string>
    <string name="lk">Laki-laki </string>
    <string name="tgl">Tanggal Pendataan </string>
    <string name="loc">Lokasi/Alamat Rumah </string>
    <string name="pic">Gambar Proses Pendataan</string>
    <string name="titik2">:</string>


    <style name="textNav">
        <item name="android:textSize">12sp</item>
        <item name="android:fontFamily">@font/poppins_regular</item>
        <item name="android:textColor">@color/yellow</item>
    </style>

    <style name="textNavB">
        <item name="android:textSize">12sp</item>
        <item name="android:fontFamily">@font/poppins_regular</item>
        <item name="android:textColor">@color/white</item>
    </style>

    <style name="colorTao" parent="Widget.MaterialComponents.BottomNavigationView">
        <item name="backgroundTint">@color/grey</item>
        <item name="height">4dp</item>
        <item name="android:background">@color/grey</item>
        <item name="background">@color/grey</item>
        <item name="android:backgroundTint">@color/grey</item>
    </style>


    <style name="text">
        <item name="android:textSize">16sp</item>
        <item name="android:fontFamily">@font/poppins_regular</item>
        <item name="android:textColor">@color/white</item>
    </style>

    <style name="title_18">
        <item name="android:textSize">16sp</item>
        <item name="android:fontFamily">@font/poppins_medium</item>
        <item name="android:textColor">@color/black</item>
    </style>

    <style name="title_20">
        <item name="android:textSize">20sp</item>
        <item name="android:fontFamily">@font/poppins_medium</item>
        <item name="android:textColor">@color/black</item>
    </style>

    <style name="WhiteSearchViewTheme" parent="Theme.AppCompat">
        <!-- Customize the textColor and cursorColor -->
        <item name="android:textColor">@color/white</item>
        <item name="android:textColorHint">@color/white</item> <!-- Set hint text color -->
        <item name="colorControlNormal">@color/white</item>
        <item name="colorControlActivated">@color/white</item>
    </style>


    <!--    <style name="MyTextInputEditText" parent="text">-->
    <!--        &lt;!&ndash; Set text color to white &ndash;&gt;-->
    <!--        <item name="android:paddingStart">24dp</item>-->
    <!--        <item name="backgroundTint">@color/white</item>-->
    <!--        <item name="android:paddingTop">16dp</item>-->
    <!--    </style>-->

    <style name="MyTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
        <item name="boxCornerRadiusBottomEnd">15dp</item>
        <item name="boxCornerRadiusBottomStart">15dp</item>
        <item name="boxCornerRadiusTopEnd">15dp</item>
        <item name="boxCornerRadiusTopStart">15dp</item>
        <item name="boxStrokeWidth">0dp</item>
        <item name="boxStrokeWidthFocused">0dp</item>
        <item name="hintEnabled">false</item>
        <item name="hintAnimationEnabled">false</item>
    </style>

    <style name="MyTextInputEditText" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
        <item name="android:fontFamily">@font/poppins_regular</item>
        <item name="android:textColorHint">@color/lightGrey</item>
        <item name="color">@color/grey</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:paddingStart">16dp</item>
        <item name="android:backgroundTint">@color/whiteDark</item>
        <item name="android:paddingTop">16dp</item>
    </style>

    <string name="title_activity_maps">MapsActivity</string>


</resources>