<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkBlue"
    android:padding="16dp">

    <TextView
        android:layout_marginTop="400px"
        android:layout_marginBottom="20px"
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_marginTop="0px"
        android:layout_marginBottom="50px"
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_welkom"
        android:textAlignment="center"
        android:textColor="@color/white"

        />
    <Button
        android:id="@+id/menuInformasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_1"
        android:layout_marginHorizontal="50sp"
        />
    <Button
        android:id="@+id/menuFormEntri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_2"
        android:layout_marginHorizontal="50sp"
        />
    <Button
        android:id="@+id/menuLihatData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_3"
        android:layout_marginHorizontal="50sp"
        />
    <Button
        android:id="@+id/menuKeluar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_4"
        android:layout_marginHorizontal="50sp"
        />

</LinearLayout>
